--- a/style.css
+++ b/style.css
@@ -64,13 +64,13 @@ background: linear-gradient(97deg, rgba(2,0,36,1) 0%, rgba(121,9,109,1) 68%, rgb
 	background-color: #515961;
 }
 .btn:active {
-	background-color: #00c9b7;
+	background-color: #8d01ff;
 }
 .btn-active {
-	background-color: #00b4a4;
+	background-color: #8d01ff;
 }
 .btn-active:hover {
-	background-color: #00c9b7;
+	background-color: #8d01ff;
 }
 .piano {
 	position: relative;
@@ -177,11 +177,11 @@ background: linear-gradient(97deg, rgba(2,0,36,1) 0%, rgba(121,9,109,1) 68%, rgb
 .piano-key-active-pseudo:hover::before,
 .piano-key-active::after,
 .piano-key-active::before {
-	color: #00b4a4;
+	color: #8d01ff;
 }
 
 .piano-key.active::before {
-color: #00c9b7;
+color: #8d01ff;
 }
 
 .fullscreen {
